Fix Nav icon shifting bug on desktop version

--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ header
 {
     text-decoration: none;
     width: 100%;
-    padding: 10%;
+    padding: 8%;
     display: flex;
     color: var(--truewhite);
     text-align: left;
@@ -311,7 +311,7 @@ header
 }
 .nav-icon
 {
-    margin-left: 15%;
+    margin-left: 36px;
     width: 40%;
 }
 .nav-link-text
@@ -322,17 +322,17 @@ header
 .nav-footer
 {
     width: 100%;
-    padding: 0;
-    margin: 0;
+    /* padding: 0; */
+    /* margin: 0; */
     text-align: center;
-    display: flexbox;
+    /* display: flexbox; */
 }
 .social-icon-bar
 {
     width: 100%;
     padding: .8rem 0;
     font-size: 2.5rem;
-    display: block;
+    /* display: block; */
 }
 .social-text
 {
@@ -340,7 +340,7 @@ header
 }
 .nav-footer-links
 {
-    margin: 0 2rem;
+    margin: 0 1.5rem;
     color: var(--truewhite);
 }
 .nav-footer-links:hover
@@ -350,7 +350,7 @@ header
 .nav-footer span
 {
     color: var(--truewhite);
-    font-size: 1.5rem;
+    font-size: 26px;
 }
 .nav-footer span a
 {
@@ -466,7 +466,7 @@ header
 
 
 
-@media (min-width: 600px)
+@media (min-width: 769px)
 {
     /* .hero-text
     {
@@ -498,8 +498,7 @@ header
     .nav-container
     {
         position: fixed;
-        width: 200px;
-        overflow: unset;
+        width: 220px;
     }
     .nav-container--closed
     {
@@ -519,11 +518,12 @@ header
     .nav-link
     {
         font-size: 36px;
-        padding: 10px 29px 10px 10px;
+        padding: 10px 25px 10px 10px;
     }
     .nav-icon
     {
-        width: 40px;
+        margin-left: 0;
+        width: 50px;
         grid-column: 3/3;
         grid-row: 1;
     }
